telepathy-haze 0.1.1 – "Release less often, release correctly" (2007-08-17)
===========================================================================

 * Fixed some segfaults, and some corruption caused by g_free-ing
   slice-allocated memory.

telepathy-haze 0.1.0 – "It's Like The ... 90s" (2007-08-10)
===========================================================

Supported in this release:

 * Connecting to MSN, XMPP, AIM known to work.
 * Plain text conversations with individual contacts.
 * The 'subscribe' list, plus contact list groups.
 * Basic presence: available, busy, away, extended away, invisible, with a
   message when supported by the underlying prpl.
 * Retrieving your own server alias and those of your contacts, plus saving
   custom aliases for your contacts to the server (where supported by the
   prpl).
 * Retrieving your contacts' avatars (but not setting your own).
 * Typing notifications.